0025589: modify the wire interference checker to detect all types of intersections